--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "template-react-bootstrap",
+  "name": "react-bootstrap-plate",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
